# DB-Designer

./: .env  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build_errors.txt  tauri.conf.json
src-tauri/src/: app_updates.rs  db.rs  lib.rs  main.rs
src/components/api-modals/: EndpointEditor.vue  FedTypeEditor.vue  GqlTypeEditor.vue  RestTypeEditor.vue  ServiceEditor.vue
src/components/api-panels/: ApiOverviewPanel.vue  ExportPanel.vue
src/components/api-sidebar/: ApiSidebar.vue
src/components/canvas/: CommentNode.vue  DiagramCanvas.vue  GroupNode.vue  MinimapPanel.vue  ResourceNode.vue  TabBar.vue  TableNode.vue
src/components/canvas/api-canvas/: ApiCanvas.vue  EndpointNode.vue  FedTypeNode.vue  GqlTypeNode.vue  RestTypeNode.vue  ServiceNode.vue
src/components/codegen/: CodegenPanel.vue
src/components/modals/: BridgeTableModal.vue  ConfirmDialog.vue  DBConnectModal.vue  DiagramExportModal.vue  ExportModal.vue  GroupEditorModal.vue  TableEditorModal.vue
src/components/query-canvas/: QueryCanvas.vue
src/components/query-sidebar/: QuerySidebar.vue
src/components/sidebar/: Sidebar.vue
src/composables/: useApiExports.ts  useAppUpdates.ts  useContainment.ts  useFileExport.ts
src/stores/: api.ts  query.ts  schema.ts  tabs.ts  workspace.ts
src/types/: api.ts  index.ts  sqlTypes.ts
