[package]
name = "db-designer"
version = "0.1.0"
description = "DB Designer — visual database schema designer"
authors = ["Graham Hill"]
edition = "2021"

[lib]
name = "db_designer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "macros"], optional = true }

[features]
default = ["postgres", "sqlite", "mysql"]
postgres = ["sqlx", "sqlx/postgres"]
sqlite   = ["sqlx", "sqlx/sqlite"]
mysql    = ["sqlx", "sqlx/mysql"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
